--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 }
 .flex-content{
     display: flex;
+    margin-bottom: 10%;
 }
 .half-width{
     width: 50%;
@@ -16,6 +17,7 @@
 .half-width img{
     height: 600px;
     width: 100%;
+    margin-left: 5%;
 }
 h1{
     font-size: 65px;
@@ -24,6 +26,9 @@ h2{
     font-size: 58px;
 }
 h3{
+    font-size: 50px;
+}
+h4{
     font-size: 40px;
 }
 p{
@@ -60,15 +65,20 @@ p{
     padding: 10px;
 }
 .bluish{
-    background-color: rgb(197, 211, 230);
+    background-color: rgb(208, 219, 235);
 }
 .violetish{
     background-color: rgb(226, 207, 226);
 }
 .pinkish{
-    background-color: rgb(247, 217, 223);
+    background-color: rgb(252, 227, 233);
 }
 .text-center{
     text-align: center;
+}
+.bacground-image{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
 }
 
