--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ p{
 }
 .link-text{
     text-decoration: none;
-    background-image:linear-gradient(rgb(230, 43, 10), tomato);
+    background-image:linear-gradient(rgb(150, 26, 4), rgb(248, 41, 4));
     color: white;
     font-weight: 700;
     padding: 12px 40px;
@@ -52,7 +52,7 @@ p{
 }
 .left-border{
     border-left:7px solid;
-    border-image: linear-gradient(rgb(230, 43, 10), tomato);
+    border-image: linear-gradient(rgb(172, 29, 4), rgb(247, 41, 5));
     border-image-slice: 1;
 }
 .one-third-width img{
@@ -76,9 +76,14 @@ p{
 .text-center{
     text-align: center;
 }
-.bacground-image{
+.bacground-image-develop{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: left;
+}
+.background-image-community{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
 
