--- a/style.css
+++ b/style.css
@@ -86,4 +86,19 @@ p{
     background-repeat: no-repeat;
     background-position: right;
 }
+footer{
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-weight: 700;
+    padding: 2%;
+    width: 100%;
+}
+footer span{
+    font-size: 35px;
+    font-family: cursive;
+}
+.tomato-color{
+    color: rgb(252, 19, 2);
+}
 
